  Made so e.g. skeletons dont use bow items since they already can use it.
  Previously was a hardcoded check.
  By default excludes bow use from vanilla skeletons, drowned trident use, pillager + piglins crossbow use and snowman snowball use
- Fix guardian crash with ice and fire mobs. They still dont go after mobs but thats another thing

Improved Mobs 1.7.7
================
- Rewrote the item using ai registration a bit. Dont need all that stuff with classes anymore
- Add a blacklist for items which should never be used (not equipped. thats what the equipment.json is for)
    - Add the buckler item from big brains mod to the default list.
- Update scaling health dependency.
- Fix difficulty not using the config values. (very strange since i am sure i wrote the code already but it vanished...)
- Changed the block breaking ai to start from the top
- Also added config to tweak the delay between each block breaking attempt

Improved Mobs 1.7.6
================
- Put the default entity list init in try catch since it can be unstable
- Add weighted breaking tools (#55)
- Fix mobs unable to ride guardians past forge 35.1.29 (#60)
- Add a finer option to control the difficulty ("Difficulty Increase" in config)
- Probably fixed mobs glitching through walls when trying to ride guardians.
  Also made them dismount after a while if not targeting other mobs.

Improved Mobs 1.7.5
================
- fix #66

Improved Mobs 1.7.4
================
- Fix crash with item ai. fixes #51, #59, #62
- Add back scaling health integration #57
- Option to toggle the difficulty display
- Rewrite pathfinding. fixes #50, #53, #63

Improved Mobs 1.7.3
================
- Exclude slimes from water riding fix #44. Slimes dont attack anyway if they ride non slime entitys

Improved Mobs 1.7.2
================
- add prevention if entity with no hitbox try to break a block causing crashes (cause thats appearently a thing)

Improved Mobs 1.7.1
================