@@ -6,6 +6,8 @@ Improved Mobs 1.7.8
   Previously was a hardcoded check.
   By default excludes bow use from vanilla skeletons, drowned trident use, pillager + piglins crossbow use and snowman snowball use
 - Fix guardian crash with ice and fire mobs. They still dont go after mobs but thats another thing
+- Moved the config default value init phase to World.Load so its not using empty configs when for
+  entities when the config is newly created
 
 Improved Mobs 1.7.7
 ================
